pod-security-vpol/restricted/require-run-as-nonroot/require-run-as-nonroot.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: require-run-as-nonroot
  annotations:
    policies.kyverno.io/title: Require runAsNonRoot in ValidatingPolicy
    policies.kyverno.io/category: Pod Security Standards (Restricted) in ValidatingPolicy
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.17.0
    kyverno.io/kyverno-version: 1.14.0
    kyverno.io/kubernetes-version: "1.30+"
    policies.kyverno.io/description: >-
      Containers must run as non-root users. This policy ensures that every container sets
      `runAsNonRoot` to `true` or inherits it from the Pod, and that neither sets it to `false`.
spec:
  validationActions:
     - Audit
  evaluation:
    background:
      enabled: true
  matchConstraints:
    resourceRules:
      - apiGroups:   [""]
        apiVersions: ["v1"]
        operations:  ["CREATE", "UPDATE"]
        resources:   ["pods"]
  variables:
   - name: ctnrs
     expression: >-
      object.spec.containers + 
      object.spec.?initContainers.orValue([]) + 
      object.spec.?ephemeralContainers.orValue([])
  validations:
    - expression: >-
        object.spec.?securityContext.?runAsNonRoot.orValue(true) == true &&
        variables.ctnrs.all(c,
          c.?securityContext.?runAsNonRoot.orValue(
            object.spec.?securityContext.?runAsNonRoot.orValue(false)) == true)
      message: >-
        Running as root is not allowed. Every container (spec.containers[*], spec.initContainers[*], and
        spec.ephemeralContainers[*]) must set securityContext.runAsNonRoot to `true`, or inherit `true`
        from spec.securityContext.runAsNonRoot. Neither spec.securityContext.runAsNonRoot nor
        container-level securityContext.runAsNonRoot may be set to `false`.
